<resources>
    <string name="app_name">Mefit</string>
    <string name="app_name_fa">میـفـیت</string>

    <!--Commons-->
    <string name="msg_no_video_found">ویدیوای یافت نشد!</string>
    <string name="msg_nothing_found">چیزی یافت نشد!</string>
    <string name="action_retry">تلاش مجدد!</string>
    <string name="action_submit">تایید</string>
    <string name="action_cancel">لغو</string>
    <string name="action_yes">بله</string>
    <string name="action_no">خیر</string>
    <string name="msg_error_occurred">خطایی رخ داده است!</string>

    <string name="title_zero">0</string>

    <string name="format_date_year">%s سال پیش</string>
    <string name="format_date_month">%s ماه پیش</string>
    <string name="format_date_week">%s هفته پیش</string>
    <string name="format_date_day">%s روز پیش</string>
    <string name="format_date_hour">%s ساعت پیش</string>
    <string name="format_date_minute">%s دقیقه پیش</string>

    <!--IntroActivity-->
    <string name="action_next">بعدی</string>
    <string name="action_prev">قبلی</string>
    <string name="action_start">شروع</string>

    <!--LoginActivity-->
    <string name="hint_phone_number">شماره موبایل (مثال : 09123456789)</string>

    <string name="validation_wrong_phone_number">شماره موبایل وارد شده صحیح نمی‌باشد!</string>
    <string name="validation_empty_phone_number">لطفا شماره موبایل خود را وارد نمایید!</string>

    <string name="msg_daily_tariffs">تعرفه روزانه پانصد تومان برای همراه اولی‌ها</string>

    <string name="error_on_login">خطا در ورود!</string>

    <string name="error_on_check_member_status">خطا در بررسی وضعیت کاربر!</string>

    <string name="error_on_subscription">خطا در پردازش عملیات خرید اشتراک!</string>

    <string name="error_on_subscription_transaction">خطا در عملیات تراکنش!</string>

    <string name="title_enter_pid">کد تایید</string>

    <string name="hint_pid">کد تایید را وارد نمایید</string>

    <string name="validation_empty_pid">کد تایید را وارد نمایید!</string>
    <string name="validation_invalid_pid">کد تایید وارد شده معتبر نمی‌باشد!</string>

    <string name="action_enter">ورود</string>

    <!--HomeFragment-->
    <string name="action_more">بیشتر</string>

    <!--CategoryListFragment-->
    <string name="title_category_list">دسـته‌بـندی‌ها</string>
    <string name="msg_not_category_found">هیچ دسته‌بندی یافت نشد!‌</string>

    <!--SearchFragment-->
    <string name="hint_search">جستــجو…</string>

    <string name="title_filter_on">فیلتر بر اساس</string>

    <!--ProfileFragment-->
    <string name="title_profile">پروفایل کاربری</string>
    <string name="title_personal_details">مشخصات کاربر</string>
    <string name="title_other">سایر</string>

    <string name="hint_first_name">نام</string>
    <string name="hint_last_name">نام خانوادگی</string>
    <string name="hint_email">ایمیل</string>

    <string name="validation_empty_first_name">نام خود را وارد نمایید!</string>
    <string name="validation_empty_last_name">نام خانوادگی خود را وارد نمایید!</string>
    <string name="validation_empty_email">آدرس ایمیل خود را وارد نمایید!</string>
    <string name="validation_invalid_email">آدرس ایمیل وارد شده معتبر نمی‌باشد!</string>

    <string name="msg_want_to_logout">آیا مایل به خروج از حساب کاربری خود می‌باشید؟</string>
    <string name="msg_want_to_unsubscribe">آیا مایل به لغو اشتراک خود می‌باشید؟</string>
    <string name="msg_profile_edited_successfully">پروفایل کاربری با موفقیت بروزرسانی شد.</string>

    <string name="error_edit_profile">خطا در ذخیره اطلاعات کاربری</string>

    <string name="action_save_changes">ذخیره</string>
    <string name="action_logout">خروج</string>
    <string name="action_unsubscribe">لغو اشتراک</string>

    <!--VideoPlayerFragment-->
    <string name="error_no_video_found">ویدیو‌ای پیدا نشد!</string>

    <!--VideoDetailFragment-->
    <string name="title_issuer">مدرس :</string>
    <string name="title_suggested_videos">ویدیو‌های مرتبط</string>
    <string name="title_tags">تگ‌ها</string>
    <string name="title_premium_description">توضیحات اختصاصی</string>
    <string name="msg_this_video_has_premium_description">این ویدیو شامل توضیحات اختصاصی می‌باشد!</string>
    <string name="title_comments">نظرات</string>

    <string name="msg_no_comment_found">هیچ نظری برای این ویدیو ثبت نشده است، شما اولین نفر باشید!</string>

    <string name="hint_enter_comment">نظر خود را بنویسید.</string>

    <string name="validation_empty_comment">نظر خود را وارد نمایید!</string>

    <string name="error_on_like">خطا در ثبت لایک!</string>

</resources>
