<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:background="@color/colorPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clProfileToolbar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@color/colorAccent"
        android:elevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnusedAttribute">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_profile"
            android:textAppearance="@style/TextAppearance.Dark.Bold"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clProfileToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/title_personal_details"
                android:textAppearance="@style/TextAppearance.Light.Bold"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:background="@color/colorDarkGrey" />

            <EditText
                android:id="@+id/edFirstName"
                style="@style/FrameEditText.Light"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/hint_first_name"
                android:inputType="textPersonName"
                android:textAppearance="@style/TextAppearance.Light"
                android:textColor="@color/colorTextLight"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/edLastName"
                style="@style/FrameEditText.Light"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/hint_last_name"
                android:inputType="textPersonName"
                android:textAppearance="@style/TextAppearance.Light"
                android:textColor="@color/colorTextLight"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/edEmail"
                style="@style/FrameEditText.Light"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textAppearance="@style/TextAppearance.Light"
                android:textColor="@color/colorTextLight"
                tools:ignore="Autofill" />

            <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                android:id="@+id/btnSaveChanges"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/bg_rounded_rect_btn_register"
                android:text="@string/action_save_changes"
                android:textAppearance="@style/TextAppearance.Dark.Bold"
                android:textSize="14sp"
                app:spinning_bar_color="@color/colorPrimary"
                app:spinning_bar_width="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/title_other"
                android:textAppearance="@style/TextAppearance.Light.Bold"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:background="@color/colorDarkGrey" />

            <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                android:id="@+id/btnUnsubscribe"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/bg_rounded_rect_btn_register"
                android:text="@string/action_unsubscribe"
                android:textAppearance="@style/TextAppearance.Dark.Bold"
                android:textSize="14sp"
                app:spinning_bar_color="@color/colorPrimary"
                app:spinning_bar_width="2dp" />

            <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                android:id="@+id/btnLogout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/bg_rounded_rect_btn_register"
                android:text="@string/action_logout"
                android:textAppearance="@style/TextAppearance.Dark.Bold"
                android:textSize="14sp"
                app:spinning_bar_color="@color/colorPrimary"
                app:spinning_bar_width="2dp" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>