<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rounded_rect_dialog">

    <TextView
        android:id="@+id/toolbarEnterPid"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:background="@drawable/bg_top_rounded_rect_toolbar"
        android:gravity="center"
        android:text="@string/title_enter_pid"
        android:textAppearance="@style/TextAppearance.Dark.Bold"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edPid"
        style="@style/FrameEditText.Light"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:textColor="@color/colorTextLight"
        android:hint="@string/hint_pid"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:textAppearance="@style/TextAppearance.Light"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarEnterPid" />

    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
        android:id="@+id/btnSubmit"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/bg_rounded_rect_btn_register"
        android:text="@string/action_submit"
        android:textAppearance="@style/TextAppearance.Dark.Bold"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edPid"
        app:spinning_bar_color="@color/colorPrimary"
        app:spinning_bar_width="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>