<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lstIntro"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnIntroPrev"
        style="?attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/selector_intro_button_previous"
        android:enabled="false"
        android:text="@string/action_prev"
        android:textAppearance="@style/TextAppearance.Dark.Bold"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnIntroStart"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnIntroStart"
        style="?attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/selector_intro_button_start"
        android:enabled="false"
        android:text="@string/action_start"
        android:textAppearance="@style/TextAppearance.Dark.Bold"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnIntroNext"
        app:layout_constraintStart_toEndOf="@+id/btnIntroPrev" />

    <Button
        android:id="@+id/btnIntroNext"
        style="?attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/selector_intro_button_next"
        android:text="@string/action_next"
        android:textAppearance="@style/TextAppearance.Dark.Bold"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnIntroStart" />


</androidx.constraintlayout.widget.ConstraintLayout>