<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:layoutDirection="rtl">

    <View
        android:id="@+id/viewVideoDetailHeader"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:background="@color/colorDarkGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCommentCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/title_zero"
        android:textAppearance="@style/TextAppearance.Light"
        android:textColor="@color/colorLightGrey"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/viewVideoDetailHeader"
        app:layout_constraintStart_toStartOf="@+id/viewVideoDetailHeader"
        app:layout_constraintTop_toTopOf="@+id/viewVideoDetailHeader" />

    <ImageButton
        android:id="@+id/btnComments"
        style="@style/SquareImageButton.Light"
        android:layout_marginStart="4dp"
        android:tint="@color/colorLightGrey"
        app:layout_constraintBottom_toBottomOf="@+id/viewVideoDetailHeader"
        app:layout_constraintStart_toEndOf="@+id/tvCommentCount"
        app:layout_constraintTop_toTopOf="@+id/viewVideoDetailHeader"
        app:srcCompat="@drawable/ic_comment"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvLikeCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/title_zero"
        android:textAppearance="@style/TextAppearance.Light"
        android:textColor="@color/colorLightGrey"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/viewVideoDetailHeader"
        app:layout_constraintStart_toEndOf="@+id/btnComments"
        app:layout_constraintTop_toTopOf="@+id/viewVideoDetailHeader" />

    <CheckBox
        android:id="@+id/cbLike"
        style="@style/LikeCheckBox"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/viewVideoDetailHeader"
        app:layout_constraintStart_toEndOf="@+id/tvLikeCount"
        app:layout_constraintTop_toTopOf="@+id/viewVideoDetailHeader" />

    <ImageButton
        android:id="@+id/btnAddToPlaylist"
        style="@style/SquareImageButton.Light"
        android:layout_marginEnd="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/viewVideoDetailHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/viewVideoDetailHeader"
        app:srcCompat="@drawable/ic_add_to_playlist"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvVideoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.Light.Bold"
        android:textColor="@color/colorAccent"
        android:textDirection="rtl"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewVideoDetailHeader"
        tools:text="@tools:sample/first_names" />

    <TextView
        android:id="@+id/tvTitleIssuerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/title_issuer"
        android:textAppearance="@style/TextAppearance.Light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvVideoTitle" />

    <TextView
        android:id="@+id/tvIssuerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:ellipsize="marquee"
        android:focusable="true"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.Light"
        android:textColor="@color/colorAccent"
        android:textDirection="rtl"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvTitleIssuerName"
        app:layout_constraintStart_toEndOf="@+id/tvTitleIssuerName"
        tools:text="@tools:sample/first_names" />

    <TextView
        android:id="@+id/tvTags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/title_tags"
        android:textAppearance="@style/TextAppearance.Light"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvIssuerName" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lstTag"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@id/tvTags"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvTags"
        app:layout_constraintTop_toTopOf="@+id/tvTags"
        tools:layout_height="40dp" />

    <View
        android:id="@+id/viewDivider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorDarkGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lstTag" />

    <ir.softap.mefit.ui.common.widget.DescriptionView
        android:id="@+id/descriptionView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewDivider" />

    <TextView
        android:id="@+id/tvSuggestedVideos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/title_suggested_videos"
        android:textAppearance="@style/TextAppearance.Light.Bold"
        android:textDirection="rtl"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lstSuggestedVideo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSuggestedVideos"
        tools:layoutManager="LinearLayoutManager"
        tools:listitem="@layout/item_list_video"
        tools:orientation="horizontal" />

</androidx.constraintlayout.widget.ConstraintLayout>